b=346421, canvas drawImage causes incorrect clipping/invalidation with CSS scaling, r=stuart