content/canvas/src/nsCanvasRenderingContext2D.cpp
@@ -827,6 +827,16 @@ nsCanvasRenderingContext2D::Render(nsIRenderingContext *rc)
 {
     nsresult rv = NS_OK;
 
+    // force clip to be set (or reset) on our underlying surface (or reset);
+    // some platforms, like win32, use the clip of the source surface as well
+    // as the destination when blitting.  This means that this costs us a 
+    // cairo_save()/cairo_restore() here.
+    // XXX fix this in cairo eventually (in the win32 surface code specifically)
+    cairo_save(mCairo);
+    cairo_reset_clip(mCairo);
+    cairo_rectangle(mCairo, 0, 0, 0, 0);
+    cairo_fill(mCairo);
+
 #ifdef MOZ_CAIRO_GFX
 
     gfxContext* ctx = (gfxContext*) rc->GetNativeGraphicData(nsIRenderingContext::NATIVE_THEBES_CONTEXT);
@@ -863,8 +873,10 @@ nsCanvasRenderingContext2D::Render(nsIRenderingContext *rc)
     void *ptr = nsnull;
 #ifdef MOZILLA_1_8_BRANCH
     rv = rc->RetrieveCurrentNativeGraphicData(&ptr);
-    if (NS_FAILED(rv) || !ptr)
-        return NS_ERROR_FAILURE;
+    if (NS_FAILED(rv) || !ptr) {
+        rv = NS_ERROR_FAILURE;
+        goto finish;
+    }
 #else
     /* OS/2 also uses NATIVE_WINDOWS_DC to get a native OS/2 PS */
     ptr = rc->GetNativeGraphicData(nsIRenderingContext::NATIVE_WINDOWS_DC);
@@ -885,12 +897,16 @@ nsCanvasRenderingContext2D::Render(nsIRenderingContext *rc)
     GdkDrawable *gdkdraw = nsnull;
 #ifdef MOZILLA_1_8_BRANCH
     rv = rc->RetrieveCurrentNativeGraphicData((void**) &gdkdraw);
-    if (NS_FAILED(rv) || !gdkdraw)
-        return NS_ERROR_FAILURE;
+    if (NS_FAILED(rv) || !gdkdraw) {
+        rv = NS_ERROR_FAILURE;
+        goto finish;
+    }
 #else
     gdkdraw = (GdkDrawable*) rc->GetNativeGraphicData(nsIRenderingContext::NATIVE_GDK_DRAWABLE);
-    if (!gdkdraw)
-        return NS_ERROR_FAILURE;
+    if (!gdkdraw) {
+        rv = NS_ERROR_FAILURE;
+        goto finish;
+    }
 #endif
 
     gint w, h;
@@ -923,6 +939,7 @@ nsCanvasRenderingContext2D::Render(nsIRenderingContext *rc)
         tx->TransformNoXLate(&sx, &sy);
     }
 
+    fprintf (stderr, "x0 %f y0 %f sx %f sy %f\n", x0, y0, sx, sy); fflush(stderr);
     cairo_translate (dest_cr, NSToIntRound(x0), NSToIntRound(y0));
     if (sx != 1.0 || sy != 1.0)
         cairo_scale (dest_cr, sx, sy);
@@ -943,8 +960,10 @@ nsCanvasRenderingContext2D::Render(nsIRenderingContext *rc)
     // OSX path
     nsIDrawingSurface *ds = nsnull;
     rc->GetDrawingSurface(&ds);
-    if (!ds)
-        return NS_ERROR_FAILURE;
+    if (!ds) {
+        rv = NS_ERROR_FAILURE;
+        goto finish;
+    }
 
     nsDrawingSurfaceMac *macds = NS_STATIC_CAST(nsDrawingSurfaceMac*, ds);
     CGContextRef cgc = macds->StartQuartzDrawing();
@@ -989,6 +1008,10 @@ nsCanvasRenderingContext2D::Render(nsIRenderingContext *rc)
     rv = NS_OK;
 #endif
 #endif
+
+  finish:
+    // from the cairo_save that we used to save the clip
+    cairo_restore(mCairo);
 
     return rv;
 }
